[Refactor] 커서 기반 무한 스크롤 기능 추가 및 코드 리뷰 반영